--- a/spectra-react/public/manifest.json
+++ b/spectra-react/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Spectra",
+  "name": "Spectra",
   "icons": [
     {
       "src": "favicon.ico",
